fix: revert global z-index to auto

--- a/src/assets/scss/global/_reset.scss
+++ b/src/assets/scss/global/_reset.scss
@@ -164,7 +164,7 @@
         inset-inline-start: auto;
         isolation: auto;
         position: relative;
-        z-index: -1;
+        z-index: auto;
         overlay: none;
 
         // Transform
